--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Raleway';
+    src: url('Fonts/Raleway/Raleway-VariableFont_wght.ttf');
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -5,22 +10,41 @@
 }
 
 h1 {
-    text-align: center;
-    font-family: Helvetica;
-    padding-top: 2px;
+    grid-area: 1 / 1 / 2 / 2;
+    color: #D5D5D5;
+    text-align: left;
+    font-family: Raleway;
+    font-weight: 100;
+    font-size: 40px;
+    display: inline;
+}
+
+#name {
+    grid-area: 1 / 1 / 2 / 2;
+    padding-left: 15%;
+    margin-top: 45px;
+    background-image: url("Photos/021\ True\ Sunset.png");
+    -webkit-background-clip: text;
+}
+
+#name:hover {
+    -webkit-text-fill-color: transparent;
+    transition: -webkit-text-fill-color 2s;
 }
 
 #portrait {
-    height: 150;
+    grid-area: 1 / 1 / 2 / 2;
+    height: 130px;
     width: 100px;
     border-radius: 50%;
-    display: block;
-    margin: 2px auto 5px auto;
+    opacity: 1;
+    display: flex;
+    margin: 0px auto 0px auto;
 }
 
 #page-container {
     position: relative;
-    min-height: 100vh;
+    min-height: 100%;
 }
 
 #content-wrap {
@@ -30,16 +54,18 @@ h1 {
 }
 
 body {
-    background-image: url("Photos/background.jpg");
+    background-image: url("Photos/075\ Clean\ Mirror.png");
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 header {
-    background-color: white;
-    background-position: center top;
+    display: grid;
+    grid-template-columns: 100% 1fr;
+    grid-template-rows: 140px 1fr;
+    background-color: rgba( 0, 0, 0, .9);
     width: 100%;
-    height: 180px;
+    height: 140px;
     border-bottom: 3px ridge gray;
     position: fixed;
     top: 0;
@@ -49,18 +75,17 @@ header {
 footer {
     position: absolute;
     bottom: 0;
+    left: 0;
     height: 2.5rem;
     width: 100%;
-    background-color: white;
-    background-position: center bottom;
-    margin-bottom: 0;
+    background-color: rgba(0, 0, 0, .9);
     border-top: 3px ridge gray;
 }
 
 #headerContent {
-    margin: 0px auto 0px auto;
+    grid-area: 1 / 1 / 2 / 2;
     width: 400px;
-    text-align: center;
+    margin: 5px auto 5px auto
 }
 
 #background {
@@ -75,7 +100,8 @@ ul.footerNav {
 ul.footerNav>li {
     font-size: 15px;
     font-family: Helvetica;
-    display: inline-block;
+    color: white;
+    display: inline;
     padding: 5px 20px;
 }
 
@@ -92,13 +118,22 @@ ul.content-Boxes {
     flex-direction: row;
 }
 
-#box {
-    background-color: white;
-    width: 250px;
-    height: 350px;
-    margin-top: 250px;
-    border-radius: 5px;
+.box {
+    background-color: black;
+    opacity: .9;
+    width: 20%;
+    height: 450px;
+    margin-top: 180px;
+    border-radius: 10px;
     box-shadow: 3px 3px 3px black;
+    transition: box-shadow 1s, height .5s, width .5s;
+}
+
+.box:hover {
+    box-shadow: 0px 0px 5px 8px #F94924;
+    height: 475px;
+    width: 21%;
+    transition: box-shadow 1s, height .5s, width .5s;
 }
 
 a.linkBox {
@@ -106,10 +141,10 @@ a.linkBox {
 }
 
 a:link {
-    color: black;
+    color: white;
     text-decoration: none;
 }
 
 a:visited {
-    color: black;
+    color: white;
 }
