--- a/style.css
+++ b/style.css
@@ -23,13 +23,11 @@ h1 {
     grid-area: 1 / 1 / 2 / 2;
     padding-left: 15%;
     margin-top: 45px;
-    background-image: url("Photos/021\ True\ Sunset.png");
-    -webkit-background-clip: text;
 }
 
-#name:hover {
-    -webkit-text-fill-color: transparent;
-    transition: -webkit-text-fill-color 2s;
+h1:hover {
+    text-shadow: 0px 0px 2px #F94924;
+    transition: text-shadow 200ms;
 }
 
 #portrait {
@@ -40,6 +38,12 @@ h1 {
     opacity: 1;
     display: flex;
     margin: 0px auto 0px auto;
+}
+
+nav {
+    grid-area: 1 / 1 / 2 / 2;
+    margin-top: 55px;
+    margin-left: 75%;
 }
 
 #page-container {
@@ -105,20 +109,25 @@ ul.footerNav>li {
     padding: 5px 20px;
 }
 
-ul.content-Boxes {
-    text-align: center;
-}
+
+/* Content Boxes */
 
 .content-Boxes {
     justify-content: space-evenly;
-    font-size: 25px;
-    font-family: helvetica;
     text-align: center;
     display: flex;
     flex-direction: row;
 }
 
+.boxList {
+    padding-top: 15px;
+    list-style-position: inside;
+}
+
 .box {
+    color: white;
+    font-size: 25px;
+    font-family: helvetica;
     background-color: black;
     opacity: .9;
     width: 20%;
@@ -148,3 +157,6 @@ a:link {
 a:visited {
     color: white;
 }
+
+
+/* END Content Boxes */
