--- a/style.css
+++ b/style.css
@@ -12,17 +12,10 @@
 h1 {
     grid-area: 1 / 1 / 2 / 2;
     color: #D5D5D5;
-    text-align: left;
     font-family: Raleway;
     font-weight: 100;
-    font-size: 40px;
+    font-size: 55px;
     display: inline;
-}
-
-#name {
-    grid-area: 1 / 1 / 2 / 2;
-    padding-left: 15%;
-    margin-top: 45px;
 }
 
 h1:hover {
@@ -32,18 +25,29 @@ h1:hover {
 
 #portrait {
     grid-area: 1 / 1 / 2 / 2;
-    height: 130px;
-    width: 100px;
-    border-radius: 50%;
+    height: 260px;
+    width: 170px;
     opacity: 1;
-    display: flex;
-    margin: 0px auto 0px auto;
+    float: left;
+    border-radius: 5px;
+}
+
+#evSpeech {
+    align-self: center;
+    font-family: Raleway;
+    font-size: 20px;
+    float: left;
+    color: #D5D5D5;
+    margin-left: 10px;
+    max-width: 80%;
 }
 
 nav {
     grid-area: 1 / 1 / 2 / 2;
     margin-top: 55px;
     margin-left: 75%;
+    display: flex;
+    flex-direction: row;
 }
 
 #page-container {
@@ -53,8 +57,7 @@ nav {
 
 #content-wrap {
     padding-bottom: 2.5rem;
-    margin-top: 180px;
-    height: 875px;
+    height: 852px;
 }
 
 body {
@@ -89,7 +92,10 @@ footer {
 #headerContent {
     grid-area: 1 / 1 / 2 / 2;
     width: 400px;
-    margin: 5px auto 5px auto
+    margin: 5px auto 5px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #background {
@@ -112,6 +118,21 @@ ul.footerNav>li {
 
 /* Content Boxes */
 
+#about {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 40%;
+    min-width: 380px;
+    height: 35%;
+    margin-top: 200px;
+    margin-left: 30%;
+    padding: 10px 15px 10px 15px;
+    background-color: black;
+    border-radius: 10px;
+    opacity: .9;
+}
+
 .content-Boxes {
     justify-content: space-evenly;
     text-align: center;
@@ -131,8 +152,9 @@ ul.footerNav>li {
     background-color: black;
     opacity: .9;
     width: 20%;
+    max-width: 400px;
     height: 450px;
-    margin-top: 180px;
+    margin-top: 50px;
     border-radius: 10px;
     box-shadow: 3px 3px 3px black;
     transition: box-shadow 1s, height .5s, width .5s;
