--- a/style.css
+++ b/style.css
@@ -3,10 +3,59 @@
     src: url('Fonts/Raleway/Raleway-VariableFont_wght.ttf');
 }
 
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-o-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-ms-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+html {
+    height: 100%;
 }
 
 h1 {
@@ -14,8 +63,13 @@ h1 {
     color: #D5D5D5;
     font-family: Raleway;
     font-weight: 100;
-    font-size: 55px;
+    font-size: clamp(3rem, 2vw, 2vw);
     display: inline;
+    animation: fadeIn linear 4s;
+    -webkit-animation: fadeIn linear 4s;
+    -moz-animation: fadeIn linear 4s;
+    -o-animation: fadeIn linear 4s;
+    -ms-animation: fadeIn linear 4s;
 }
 
 h1:hover {
@@ -35,19 +89,14 @@ h1:hover {
 #evSpeech {
     align-self: center;
     font-family: Raleway;
-    font-size: 20px;
+    font-size: clamp(1rem, 1vw, 1.2rem);
     float: left;
-    color: #D5D5D5;
+    color: black;
     margin-left: 10px;
     max-width: 80%;
-}
-
-nav {
-    grid-area: 1 / 1 / 2 / 2;
-    margin-top: 55px;
-    margin-left: 75%;
-    display: flex;
-    flex-direction: row;
+    max-height: 90%;
+    padding: 1px 1px 1px 1px;
+    overflow: auto;
 }
 
 #page-container {
@@ -61,18 +110,20 @@ nav {
 }
 
 body {
+    position: absolute;
+    top: 0;
+    left: 0;
     background-image: url("Photos/075\ Clean\ Mirror.png");
     background-size: cover;
     background-repeat: no-repeat;
+    min-height: 100%;
 }
 
 header {
-    display: grid;
-    grid-template-columns: 100% 1fr;
-    grid-template-rows: 140px 1fr;
+    display: flex;
     background-color: rgba( 0, 0, 0, .9);
     width: 100%;
-    height: 140px;
+    height: 80px;
     border-bottom: 3px ridge gray;
     position: fixed;
     top: 0;
@@ -92,7 +143,8 @@ footer {
 #headerContent {
     grid-area: 1 / 1 / 2 / 2;
     width: 400px;
-    margin: 5px auto 5px auto;
+    height: 80px;
+    margin: 0px auto 5px auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -123,14 +175,15 @@ ul.footerNav>li {
     align-items: flex-start;
     justify-content: flex-start;
     width: 40%;
-    min-width: 380px;
+    min-width: 400px;
     height: 35%;
-    margin-top: 200px;
-    margin-left: 30%;
+    margin-top: 150px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 10px 15px 10px 15px;
-    background-color: black;
+    background-color: rgba( 240, 160, 75, .5);
+    box-shadow: 1px 1px 3px black;
     border-radius: 10px;
-    opacity: .9;
 }
 
 .content-Boxes {
@@ -146,25 +199,26 @@ ul.footerNav>li {
 }
 
 .box {
-    color: white;
-    font-size: 25px;
-    font-family: helvetica;
-    background-color: black;
-    opacity: .9;
+    color: black;
+    font-size: clamp(1.2rem, 1vw, 1vw);
+    font-family: Raleway;
+    background-color: rgba( 240, 160, 75, .5);
     width: 20%;
     max-width: 400px;
-    height: 450px;
+    min-height: 450px;
+    height: 80%;
+    max-height: 450;
     margin-top: 50px;
     border-radius: 10px;
-    box-shadow: 3px 3px 3px black;
+    box-shadow: 1px 1px 8px black;
     transition: box-shadow 1s, height .5s, width .5s;
 }
 
 .box:hover {
-    box-shadow: 0px 0px 5px 8px #F94924;
-    height: 475px;
+    box-shadow: 0px 0px 3px 4px #fef9f8;
+    height: 100%;
     width: 21%;
-    transition: box-shadow 1s, height .5s, width .5s;
+    transition: box-shadow 300ms, height .5s, width .5s;
 }
 
 a.linkBox {
@@ -172,12 +226,14 @@ a.linkBox {
 }
 
 a:link {
-    color: white;
+    font-family: Raleway;
+    color: black;
     text-decoration: none;
 }
 
 a:visited {
-    color: white;
+    font-family: Raleway;
+    color: black;
 }
 
 
